'完成酒店模块'

--- a/templates/elements.html
+++ b/templates/elements.html
@@ -740,8 +740,8 @@
 									</header>
 									<ul>
 										<li><a href="{% url 'onlineshop' %}">网购</a></li>
-										<li><a href="{% url 'travel_hotel' %}">旅行</a></li>
-										<li><a href="elements.html">待定</a></li>
+										<li><a href="{% url 'travel_hotel' %}">酒店</a></li>
+										<li><a href="elements.html">旅游</a></li>
 										<li>
 											<span class="opener">Submenu</span>
 											<ul>
