--- a/templates/index3.html
+++ b/templates/index3.html
@@ -50,7 +50,7 @@
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="/static/images/pic10.jpg" alt="" />
+										<img src="/static/img/tm-img-320x320-1.jpg" alt="" />
 									</span>
 								</section>
 						</div>
@@ -74,8 +74,8 @@
 									</header>
 									<ul>
 										<li><a href="{% url 'onlineshop' %}">网购</a></li>
-										<li><a href="generic.html">旅游</a></li>
-										<li><a href="elements.html">酒店</a></li>
+										<li><a href="{% url 'travel_hotel' %}">酒店</a></li>
+										<li><a href="elements.html">旅游</a></li>
 										<li>
 											<span class="opener">Submenu</span>
 											<ul>
