--- a/templates/show2.html
+++ b/templates/show2.html
@@ -62,7 +62,7 @@ SmartPhone Compatible web template, free WebDesigns for Nokia, Samsung, LG, Sony
 							<h4>苏宁易购</h4>
 						</div>
 						<div class="stats-right">
-							<label> 45</label>
+							<label><a href="{{ suningurl }}">苏宁</a> </label>
 						</div>
 						<div class="clearfix"> </div>	
 					</div>
