'完成途牛旅游网的爬取'

--- a/templates/hotel.html
+++ b/templates/hotel.html
@@ -32,7 +32,7 @@
 <section>
 <div class="wrap-header">
 		<h1>see the word differently</h1>
-		<span>Request,design and book travel experiences as unique as you are</span>
+		<span>搜索你想要的的地方酒店</span>
 		<center><div class="search-form">
 			<form method="get" action="{% url 'hotel_reslut' %}" id="search" class="f-right">
 				<input name="q" type="text" size="40" placeholder="Where are you going ?">
@@ -119,8 +119,8 @@
 									</header>
 									<ul>
 										<li><a href="{% url 'onlineshop' %}">网购</a></li>
-										<li><a href="{% url 'travel_hotel' %}">旅行</a></li>
-										<li><a href="elements.html">待定</a></li>
+										<li><a href="{% url 'hotel' %}">酒店</a></li>
+										<li><a href="{% url 'travel' %}">旅游</a></li>
 										<li>
 											<span class="opener">Submenu</span>
 											<ul>
