'完成淘宝的商品爬取和马蜂窝美食的爬取'

--- a/templates/cate.html
+++ b/templates/cate.html
@@ -32,9 +32,9 @@
 <section>
 <div class="wrap-header">
 		<h1>see the word differently</h1>
-		<span>搜索你想要的的地方酒店</span>
+		<span>搜索你想要的的地方美食</span>
 		<center><div class="search-form">
-			<form method="get" action="{% url 'hotel_reslut' %}" id="search" class="f-right">
+			<form method="get" action="{% url 'cate_reslut' %}" id="search" class="f-right">
 				<input name="q" type="text" size="40" placeholder="Where are you going ?">
 				<input type="submit" name="Submit" value="Search">
 			</form>
@@ -44,7 +44,7 @@
 </section>
                             <style type="text/css">
 .wrap-header{
-	background: url('../static/images/1.jpg') no-repeat 100% 100%;
+	background: url('../static/images/6.jpg') no-repeat 100% 100%;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
