'完成前端页面的展示'

--- a/templates/cate.html
+++ b/templates/cate.html
@@ -1,39 +1,25 @@
-{% load staticfiles %}
-<!DOCTYPE HTML>
+{% extends 'index3_base.html' %}
 
-<html>
-	<head>
-		<title>尽搜己用</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<!--[if lte IE 8]><script src="/static/assets/js/ie/html5shiv.js"></script><![endif]-->
+{% block content %}
+							<!-- Content -->
+<section>
+    		<!--[if lte IE 8]><script src="/static/assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="/static/assets/css/main.css" />
 		<!--[if lte IE 9]><link rel="stylesheet" href="/static/assets/css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="/static/assets/css/ie8.css" /><![endif]-->
 		<link href="/static/css/onlinecss.css" rel="stylesheet">
 			<script src="http://apps.bdimg.com/libs/jquery/1.4.3/jquery.min.js" type="text/javascript"></script>
 	<script src="/static/js/onlineshop.js" type="text/javascript"></script>
-	</head>
-	<body>
-
-		<!-- Wrapper -->
-			<div id="wrapper">
-
-				<!-- Main -->
-					<div id="main">
-						<div class="inner">
-
-{% block content %}
-							<!-- Content -->
-<section>
 <div class="wrap-header">
 		<h1>地方美食</h1>
-		<center><div class="search-form">
-			<form method="get" action="{% url 'cate_reslut' %}" id="search" class="f-right">
-				<input name="q" type="text" size="40" placeholder="搜索你想要的的地方美食">
-				<input type="submit" name="Submit" value="Search">
-			</form>
-		</div></center>
+		<center>
+                            <section id="search" class="alt">
+        <form method="get" action="{% url 'cate_reslut' %}">
+            <input type="text" name="q" id="query" placeholder="Search" />
+            <input type="submit" name="Submit" value="Search">
+        </form>
+    </section>
+        </center>
 	</div>
 </section>
                             <style type="text/css">
@@ -83,53 +69,12 @@
 	color: #000;
 	cursor: pointer;
 	font: bold 17px Arial, Helvetica, sans-serif;
-	font-weight: 780;
+	font-weight: 700;
 	outline: none;
 	-webkit-border-radius: 8px;
     -moz-border-radius: 8px;
     border-radius: 8px;
 	}
 
-                            </style>
-                            {% endblock%}
-
-						</div>
-					</div>
-				<!-- Sidebar -->
-					<div id="sidebar">
-						<div class="inner">
-
-							<!-- Search -->
-								<section id="search" class="alt">
-									<form method="post" action="#">
-										<input type="text" name="query" id="query" placeholder="Search" />
-									</form>
-								</section>
-
-							<!-- Menu -->
-								<nav id="menu">
-									<header class="major">
-										<h2>Menu</h2>
-									</header>
-									<ul>
-										<li><a href="{% url 'onlineshop' %}">网购</a></li>
-										<li><a href="{% url 'hotel' %}">酒店</a></li>
-										<li><a href="{% url 'travel' %}">旅游</a></li>
-										<li><a href="{% url 'cate' %}">美食</a></li>
-									</ul>
-								</nav>
-
-						</div>
-					</div>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="http://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
-			<script src="/static/assets/js/skel.min.js"></script>
-			<script src="/static/assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="/static/assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="/static/assets/js/main.js"></script>
-
-	</body>
-</html>
+</style>
+{% endblock%}
