--- a/templates/search_reslut.html
+++ b/templates/search_reslut.html
@@ -1,4 +1,4 @@
-{% extends 'elements.html' %}
+{% extends 'onlineshop.html' %}
 
 {% block content %}
     {% for product in jdlist %}
@@ -18,7 +18,7 @@
   </div>
   <div class="comment">&nbsp; </div>
   <div class="mall">
-    <p class="m"><img src="https://misc.360buyimg.com/jdf/1.0.0/unit/global-header/1.0.0/i/jdlogo-201708-@1x.png" align="absmiddle" alt="京东商城的报价"> <span class="shenqingGY">京东商城</span></p>
+    <p class="m"><img src="https://misc.360buyimg.com/jdf/1.0.0/unit/global-header/1.0.0/i/jdlogo-201708-@1x.png" height="42px" width="134px" align="absmiddle" alt="京东商城的报价"> <span class="shenqingGY">京东商城</span></p>
   </div>
   <div class="clear"></div>
 </div>
@@ -40,7 +40,7 @@
   </div>
   <div class="comment">&nbsp; </div>
   <div class="mall">
-    <p class="m"><img src="https://image3.suning.cn/uimg/cms/img/153135831598566332.png" align="absmiddle"> <span class="shenqingGY">苏宁易购</span></p>
+    <p class="m"><img src="https://image3.suning.cn/uimg/cms/img/153135831598566332.png" height="42px" width="134px" align="absmiddle"> <span class="shenqingGY">苏宁易购</span></p>
   </div>
   <div class="clear"></div>
 </div>
@@ -63,7 +63,7 @@
   </div>
   <div class="comment">&nbsp; </div>
   <div class="mall">
-    <p class="m"><img src="https://gtms01.alicdn.com/tps/i1/T1Kz0pXzJdXXXIdnjb-146-58.png" align="absmiddle"> <span class="shenqingGY">淘宝天猫</span></p>
+    <p class="m"><img src="https://gtms01.alicdn.com/tps/i1/T1Kz0pXzJdXXXIdnjb-146-58.png" height="42px" width="134px" align="absmiddle"> <span class="shenqingGY">淘宝天猫</span></p>
   </div>
   <div class="clear"></div>
 </div>
